# fastapi-html

./: README.md  pyproject.toml
src/: html.py  model.py  rest.py
templates/: checkbox.html  download.html  form.html
