[tool.poetry]
name = "fastapi-html"
version = "0.1.0"
description = ""
authors = ["eugeneyan <eugeneyanziyou@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
jinja2 = "^2.11.2"
uvicorn = "^0.11.6"
python-multipart = "^0.0.5"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
